err/wizard.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wizard'...
Listing './lib/python3.5/site-packages/wizard/app'...
Compiling './lib/python3.5/site-packages/wizard/app/mediawiki.py'...
***   File "./lib/python3.5/site-packages/wizard/app/mediawiki.py", line 48
    os.chmod("config", 0777) # XXX: vaguely sketchy
                          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/wizard/app/phpBB.py'...
***   File "./lib/python3.5/site-packages/wizard/app/phpBB.py", line 47
    os.chmod("config.php", 0777)
                              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/wizard/app/wordpress.py'...
***   File "./lib/python3.5/site-packages/wizard/app/wordpress.py", line 99
    os.chmod(".", 0777) # XXX: squick squick
                     ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/wizard/command'...
Compiling './lib/python3.5/site-packages/wizard/command/backup.py'...
***   File "./lib/python3.5/site-packages/wizard/command/backup.py", line 13
    print d.backup(options)
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wizard/command/database.py'...
***   File "./lib/python3.5/site-packages/wizard/command/database.py", line 12
    print deployment.dsn.database
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wizard/command/errors.py'...
***   File "./lib/python3.5/site-packages/wizard/command/errors.py", line 12
    print "Application %s does not exist, at %s" % (e.app, e.location)
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wizard/command/list.py'...
***   File "./lib/python3.5/site-packages/wizard/command/list.py", line 16
    print d.url.geturl()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wizard/command/mass_upgrade.py'...
***   File "./lib/python3.5/site-packages/wizard/command/mass_upgrade.py", line 136
    print "% 4d out of % 4d installs (% 5.1f%%) %s" % (number, total, float(number)/total*100, description)
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wizard/command/quota.py'...
***   File "./lib/python3.5/site-packages/wizard/command/quota.py", line 13
    print "%d %d" % r
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wizard/command/research.py'...
***   File "./lib/python3.5/site-packages/wizard/command/research.py", line 43
    print "-       -       " +  d.location
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wizard/command/restore.py'...
***   File "./lib/python3.5/site-packages/wizard/command/restore.py", line 14
    print "No restore points available"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wizard/command/summary'...
Compiling './lib/python3.5/site-packages/wizard/command/summary/unsupported.py'...
***   File "./lib/python3.5/site-packages/wizard/command/summary/unsupported.py", line 19
    print version
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wizard/command/summary/version.py'...
***   File "./lib/python3.5/site-packages/wizard/command/summary/version.py", line 25
    print "No applications found"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wizard/command/upgrade.py'...
***   File "./lib/python3.5/site-packages/wizard/command/upgrade.py", line 26
    print "Upgrade complete"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wizard/install'...
Compiling './lib/python3.5/site-packages/wizard/old_log.py'...
***   File "./lib/python3.5/site-packages/wizard/old_log.py", line 60
    raise e, None, sys.exc_info()[2]
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wizard/prompt.py'...
***   File "./lib/python3.5/site-packages/wizard/prompt.py", line 44
    print fill(text)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wizard/sphinx'...
Listing './lib/python3.5/site-packages/wizard/tests'...
Listing './lib/python3.5/site-packages/wizard-0.1.dev0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
